--- a/doc/report.tex
+++ b/doc/report.tex
@@ -576,17 +576,32 @@ datos a la vez, pasando por la utilizacion varias unidades de computo en el mism
 \bigskip
 
 El c\'alculo de las mejoras de rendimiento, cual es la potencial mejor y su l\'imite m\'aximo es una tarea no trivial.
+Existen algunas leyes frecuentemente utilizadas durante el an\'alisis de rendimiento.
 
 \subsection{Ley de {\it Amdahl}}
 
-Existen algunas leyes frecuentemente utilizadas durante el an\'alisis de
-rendimiento. La ley de {\it Amdahl} \cite{amdahl} dimensiona la mejora que
-puede obtenerse en un sistema de acuerdo a las mejoras logradas en sus
-componentes.
+ La ley de {\it Amdahl} \cite{amdahl} dimensiona la mejora que puede obtenerse en un sistema de acuerdo a las mejoras logradas en sus
+componentes. Nos ayuda a establecer un l\'imite m\'aximo de mejora.
+
+The speedup of a program using multiple processors in parallel computing is limited by the time needed for the sequential fraction of the program.
+ parallel computing is only useful for either small numbers of processors, or problems with very high values of P: so-called embarrassingly parallel problems
+ A great part of the craft of parallel programming consists of attempting to reduce the component (1 – P) to the smallest possible value.
 
 \bigskip
 
-$ T = S + \frac{P }{ p} $ donde T = tiempo de ejecuci\'on, S = trabajo serial, P = trabajo paralelizable, p = unidades de c\'omputo
+$ maximum speed up = \frac{1}{(1-P) + \frac{P}{N}} $ donde P = trabajo paralelizable (1-P es el trabajo en serio), N = cantidad de unidades de c\'omputo
+
+\bigskip
+
+Suponiendo que una aplicaci\'on requiere de un trabajo serial más un trabajo paralelizable; esta ley nos deja estimar la m\'axima ganancia posible
+de modo que incluso teniendo infinitas unidades de c\'omputo la ganancia esta limitada como se muestra a continuaci\'on.
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=5cm]{amdahl.png}
+\caption{Mejora M\'axima}
+\end{center}
+\end{figure}
 
 \subsection{Ley de {\it Gustafson}}
 
@@ -596,6 +611,19 @@ repetitivos con conjuntos de datos similares pueden ser f\'acilmente
 paralelizadas. En comparaci\'on, la ley anterior no escala el tama\~no o
 resoluci\'on de problema cuando se incrementa la potencia de c\'alculo, es
 decir con un tama\~no de problema fijo.
+
+which says that problems with large, repetitive data sets can be efficiently parallelized
+
+$ speedup(P) = P - \alpha . ( P - 1) $
+
+Gustafson's law addresses the shortcomings of Amdahl's law, which does not scale the availability of computing power as the number of machines increases. Gustafson's Law proposes that programmers set the size of problems to use the available equipment to solve problems within a practical fixed time. Therefore, if faster (more parallel) equipment is available, larger problems can be solved in the same time.
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=5cm]{gustafson.png}
+\caption{Tama\~no de Datos de Entrada}
+\end{center}
+\end{figure}
 
 \subsection{M\'etrica de {\it Karp-Flatt}}
 
@@ -607,6 +635,8 @@ pipeline. formulas. rangos de optimizacion posibles.
 simulacion. soporte para decidir si cambiar hardware o arquitectura del
 sistema.
 
+Esta metrica nos permite rapidamente estimar la mejora posible al aplicar un alto nivel de paralelismo.
+
 \section{Patrones de Dise\~no}
 
 Entre los patrones de dise\~no m\'as discutidos se encuentran: master/worker,
@@ -617,15 +647,22 @@ un conjunto en com\'un.
 
 \subsection{Pipeline}
 
-Etapas.
+Este dise\~no establece una divisi\'on del trabajo en etapas aisladas.
+
+Cada etapa puede ser computada al mismo tiempo, por lo que las unidades de trabajo que transitan las etapas pueden ser solapadas entre si.
+Aunque la cantidad de trabajo es el mismo, el solapamiento permite completar mas unidades de trabajo en N etapas al momento N+i con i=1.
 
 \subsection{Master/Worker}
 
 Maestro/Trabajador.
 
+Balanceo de carga.
+
 \subsection{Work-Stealing}
 
 Robo de Trabajo.
+
+Balanceo de carga automatico, sin importan si son unidades de c\'omputo heterogeneo.
 
 \chapter{Herramientas}
 
@@ -669,7 +706,7 @@ de dependencias.
 
 \subsection{Perfil de Ejecuci\'on}
 
-El perfil de ejecuci\'on muestra el tiempo y el tiempo acumulado en segundos
+El perfil de ejecuci\'on muestra el tiempo individual y el tiempo acumulado en segundos
 de cada l\'inea de c\'odigo de la aplicaci\'on.
 
 {\tt time, cumulative seconds, self seconds, calls, self ms/call,
@@ -678,6 +715,9 @@ de cada l\'inea de c\'odigo de la aplicaci\'on.
 \subsection{Gr\'afico de llamadas}
 
 index, \% time, self, children, called, name
+
+La herramienta tambi\'en muestra un cuadro de las llamadas entre funciones realizadas por el programa.
+Esto permite visualizar el esquema de dependencias durante la ejecuci\'on.
 
 \subsection{Comportamiento}
 
@@ -816,6 +856,10 @@ El c\'odigo fuente de una implementaci\'on simplista se encuentra adjuntado en
 el ap\'endice. Al aplicar las herramientas vistas previamente se identifica
 claramente que la multiplicaci\'on de los elementos de la matriz consume el
 mayor tiempo de c\'omputo.
+
+\bigskip
+
+
 
 \bigskip
 
