--- a/doc/report.tex
+++ b/doc/report.tex
@@ -42,7 +42,7 @@
   Este trabajo resume la experiencia que debe atravesar cualquier
   individuo en busca de las diferentes alternativas para el an\'alisis de
   rendimiento; incluyendo la selecci\'on de herramientas de soporte y la
-  definici\'on de un procedimiento rudimentario para la aplicaci\'on sistem\'atica
+  definici\'on de un procedimiento sistem\'atico para la aplicaci\'on sistem\'atica
   de las mismas.
 
   \bigskip
